# HouseApp

./: README.md  docker-compose.yml
.github/: dependabot.yml  semantic.yml
.github/workflows/: images.yml  test.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ormconfig.env.example  package-lock.json  package.json  sqlx-data.json
backend/config/: development.toml  local.toml
backend/migrations/: 20220116151957_init.up.sql  20220116152124_oil.down.sql  20220116152124_oil.up.sql  20220116152126_power.down.sql  20220116152126_power.up.sql  20220116152130_water.down.sql  20220116152130_water.up.sql
backend/prisma/: schema.prisma
backend/src/: app.module.ts  database.rs  main.rs  main.ts
backend/src/entity/: oil.entity.ts  power.entity.ts  water.entity.ts
backend/src/handlers/: mod.rs  oil.rs  power.rs  water.rs
backend/src/migrations/: 1610538712764-init.ts  1617101678584-DecimalSupport.ts
backend/src/models/: mod.rs  oil.rs  power.rs  water.rs
backend/src/oil/: oil.controller.spec.ts  oil.controller.ts  oil.module.ts  oil.service.spec.ts  (+1 more)
frontend/: .prettierrc.json  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html
rust-backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
rust-backend/migrations/2021-06-01-161010_init/: down.sql  up.sql
rust-backend/src/: main.rs  models.rs  schema.rs
rust-backend/src/queries/: oil.rs  power.rs  water.rs
rust-backend/src/routes/: oil.rs  power.rs  water.rs
rust-backend/src/utils/: mod.rs
(+173 files in other folders)
