[package]
name = "house-backend"
version = "0.1.0"
authors = ["Jonny <gitkraken@mail-js.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
env_logger = "0.9.0"
serde = { version="1.0.130", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
chrono = {version = "0.4", features= ["serde"]}